--- a/src/SprykerFeature/Zed/Application/Presentation/Layout/Partials/header.twig
+++ b/src/SprykerFeature/Zed/Application/Presentation/Layout/Partials/header.twig
@@ -8,8 +8,8 @@
     {% block body_header_breadcrumb %}
         <nav class="breadcrumb">
             <ul>
-                {%- for location in navigation.path -%}
-                    <li>{{ location.label }}</li>
+                {%- for location in breadcrumbs -%}
+                    <li><a href="{{ location.uri }}">{{ location.label }}</a></li>
                 {%- endfor -%}
             </ul>
         </nav>
