--- a/src/SprykerFeature/Zed/Auth/Static/Assets/styles/screen.scss
+++ b/src/SprykerFeature/Zed/Auth/Static/Assets/styles/screen.scss
@@ -164,9 +164,20 @@ body.spy-login {
 		text-align:center;
 
 		button.button {
-			@extend %button-default-assembly;
+			@extend %shared-button;
+			@extend %shared-button-default;
 
 			@include wh(block, border-box, 350px, 36px);
+
+			&:hover,
+			&:focus {
+				@extend %shared-button-default-hover;
+			}
+
+			&:disabled,
+			&.disabled {
+				@extend %shared-button-default-disabled;
+			}
 		}
 	}
 }
