Added custom bundle resource block

--- a/src/SprykerFeature/Zed/Auth/Presentation/Login/index.twig
+++ b/src/SprykerFeature/Zed/Auth/Presentation/Login/index.twig
@@ -1,5 +1,11 @@
 {% extends '@Application/layout.twig' %}
 
+
+{% block head_css %}
+    <link rel="stylesheet" type="text/css" href="{{ staticPath('Auth/styles/bundle.css') }}">
+{% endblock %}
+
+
 {% block body_header %}{% endblock %}
 {% block body_menu   %}{% endblock %}
 
