adding user grid to group form

--- a/src/SprykerFeature/Zed/Acl/Presentation/Group/index.twig
+++ b/src/SprykerFeature/Zed/Acl/Presentation/Group/index.twig
@@ -8,5 +8,6 @@
 
     {% include '@Acl/Group/form.twig' %}
     {% include '@Acl/Group/rules.twig' %}
+    {% include '@Acl/Group/users.twig' %}
 
 {% endblock %}
