--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -15,6 +15,7 @@
 @import 'components/shopping-cart';
 @import 'components/search';
 @import 'components/catalog-filters';
+@import 'components/main-nav';
 
 @import 'layout/header';
 @import 'layout/footer';
