--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,7 +1,6 @@
 <header class="header">
   <a href="/" class="shop-logo">Spryker Shop</a>
   <a href="#" class="nav-toggle js-nav-toggle"><span></span></a>
-  <nav class="main-nav"></nav>
   <div class="header__search js-search">
     <button class="search__button js-search-button">Search</button>
     <input type="text" class="search__box js-search-box">
@@ -11,3 +10,4 @@
   </div>
   {{> shopping-cart }}
 </header>
+{{> main-nav}}
