--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -45,28 +45,28 @@
 
   <div class="catalog__products-holder js-products-holder">
     <section class="catalog__products js-products-current">
-      {{> catalog/product details-url='/product-detail.html?id=123' image-url='/images/products/baby-panda.jpg' name='Babypanda' price='€9,99' }}
-      {{> catalog/product details-url='/product-detail.html?id=123' image-url='/images/products/baby-white-tiger.jpg' name='Weißtigerbaby' price='€9,99' }}
-      {{> catalog/product details-url='/product-detail.html?id=123' image-url='/images/products/baby-tiger.jpg' name='Tigerbaby' price='€9,99' }}
-      {{> catalog/product details-url='/product-detail.html?id=123' image-url='/images/products/crocodile.jpg' name='Krokodil' price='€9,99' }}
-      {{> catalog/product details-url='/product-detail.html?id=123' image-url='/images/products/horse-begging.jpg' name='Pferd' price='€9,99' }}
-      {{> catalog/product details-url='/product-detail.html?id=123' image-url='/images/products/horse-black-white.jpg' name='Pferd 2' price='€9,99' }}
-      {{> catalog/product details-url='/product-detail.html?id=123' image-url='/images/products/lion.jpg' name='Löwe' price='€9,99' }}
-      {{> catalog/product details-url='/product-detail.html?id=123' image-url='/images/products/ostrich.jpg' name='Strauß' price='€9,99' }}
-      {{> catalog/product details-url='/product-detail.html?id=123' image-url='/images/products/rhinoceros.jpg' name='Nashorn' price='€9,99' }}
+      {{> catalog/product product-url='/product-detail.html?id=123' image-url='/images/products/baby-panda.jpg' name='Babypanda' price='€9,99' }}
+      {{> catalog/product product-url='/product-detail.html?id=123' image-url='/images/products/baby-white-tiger.jpg' name='Weißtigerbaby' price='€9,99' }}
+      {{> catalog/product product-url='/product-detail.html?id=123' image-url='/images/products/baby-tiger.jpg' name='Tigerbaby' price='€9,99' }}
+      {{> catalog/product product-url='/product-detail.html?id=123' image-url='/images/products/crocodile.jpg' name='Krokodil' price='€9,99' }}
+      {{> catalog/product product-url='/product-detail.html?id=123' image-url='/images/products/horse-begging.jpg' name='Pferd' price='€9,99' }}
+      {{> catalog/product product-url='/product-detail.html?id=123' image-url='/images/products/horse-black-white.jpg' name='Pferd 2' price='€9,99' }}
+      {{> catalog/product product-url='/product-detail.html?id=123' image-url='/images/products/lion.jpg' name='Löwe' price='€9,99' }}
+      {{> catalog/product product-url='/product-detail.html?id=123' image-url='/images/products/ostrich.jpg' name='Strauß' price='€9,99' }}
+      {{> catalog/product product-url='/product-detail.html?id=123' image-url='/images/products/rhinoceros.jpg' name='Nashorn' price='€9,99' }}
     </section>
     <div class="catalog__loading-text">Loading...</div>
 
     <section class="catalog__products js-products-next">
-      {{> catalog/product details-url='/product-detail.html?id=123' image-url='/images/products/horse-begging.jpg' name='Pferd' price='€9,99' }}
-      {{> catalog/product details-url='/product-detail.html?id=123' image-url='/images/products/horse-black-white.jpg' name='Pferd 2' price='€9,99' }}
-      {{> catalog/product details-url='/product-detail.html?id=123' image-url='/images/products/lion.jpg' name='Löwe' price='€9,99' }}
-      {{> catalog/product details-url='/product-detail.html?id=123' image-url='/images/products/ostrich.jpg' name='Strauß' price='€9,99' }}
-      {{> catalog/product details-url='/product-detail.html?id=123' image-url='/images/products/rhinoceros.jpg' name='Nashorn' price='€9,99' }}
-      {{> catalog/product details-url='/product-detail.html?id=123' image-url='/images/products/baby-panda.jpg' name='Pandababy' price='€9,99' }}
-      {{> catalog/product details-url='/product-detail.html?id=123' image-url='/images/products/baby-white-tiger.jpg' name='Weißtigerbaby' price='€9,99' }}
-      {{> catalog/product details-url='/product-detail.html?id=123' image-url='/images/products/baby-tiger.jpg' name='Tigerbaby' price='€9,99' }}
-      {{> catalog/product details-url='/product-detail.html?id=123' image-url='/images/products/crocodile.jpg' name='Krokodil' price='€9,99' }}
+      {{> catalog/product product-url='/product-detail.html?id=123' image-url='/images/products/horse-begging.jpg' name='Pferd' price='€9,99' }}
+      {{> catalog/product product-url='/product-detail.html?id=123' image-url='/images/products/horse-black-white.jpg' name='Pferd 2' price='€9,99' }}
+      {{> catalog/product product-url='/product-detail.html?id=123' image-url='/images/products/lion.jpg' name='Löwe' price='€9,99' }}
+      {{> catalog/product product-url='/product-detail.html?id=123' image-url='/images/products/ostrich.jpg' name='Strauß' price='€9,99' }}
+      {{> catalog/product product-url='/product-detail.html?id=123' image-url='/images/products/rhinoceros.jpg' name='Nashorn' price='€9,99' }}
+      {{> catalog/product product-url='/product-detail.html?id=123' image-url='/images/products/baby-panda.jpg' name='Pandababy' price='€9,99' }}
+      {{> catalog/product product-url='/product-detail.html?id=123' image-url='/images/products/baby-white-tiger.jpg' name='Weißtigerbaby' price='€9,99' }}
+      {{> catalog/product product-url='/product-detail.html?id=123' image-url='/images/products/baby-tiger.jpg' name='Tigerbaby' price='€9,99' }}
+      {{> catalog/product product-url='/product-detail.html?id=123' image-url='/images/products/crocodile.jpg' name='Krokodil' price='€9,99' }}
     </section>
   </div>
 
