add new group form and explain group working

--- a/src/SprykerFeature/Zed/Acl/Presentation/Group/index.twig
+++ b/src/SprykerFeature/Zed/Acl/Presentation/Group/index.twig
@@ -6,8 +6,12 @@
 
 {% block content %}
 
+<section spy-app="spyFormat, spyGrid, spyForm, spyLayout">
+
     {% include '@Acl/Group/form.twig' %}
     {% include '@Acl/Group/rules.twig' %}
     {% include '@Acl/Group/users.twig' %}
+
+</section>
 
 {% endblock %}
