--- a/src/SprykerFeature/Zed/Acl/Presentation/Group/form.twig
+++ b/src/SprykerFeature/Zed/Acl/Presentation/Group/form.twig
@@ -1,15 +1,16 @@
 <section
-        spy-app="spyFormat, spyGrid, spyForm, spyLayout"
         ng-controller="FormController"
         class="spy-layout sparse"
         src="/acl/group/form/{{ query | default ('') }}"
+        name="groupForm"
+        channel="groupFormChannel"
         >
     <h3>Group</h3>
 
     <div spy-input-text="field.name" options="{ label : 'Group Name' }"></div>
 
     <div class="spy-layout buttons">
-        <button class="button default" type="submit" ng-disabled="query" ng-click="update()">Update</button>
+        <button class="button default" type="submit" ng-disabled="query" ng-click="update()">Save</button>
     </div>
 
 </section>
