--- a/src/SprykerFeature/Zed/Acl/Presentation/Users/form.twig
+++ b/src/SprykerFeature/Zed/Acl/Presentation/Users/form.twig
@@ -1,8 +1,19 @@
+<spy-listen
+        on="acl.group.new.form"
+        do="openLayer(); read()"
+        channel="groupFormChannel"
+        scope="groupForm"
+        >
+</spy-listen>
+
+<div spy-form-update="closeLayer()" channel="groupFormChannel" scope="groupForm"></div>
+<div spy-form-update="read();" channel="groupFormChannel" scope="userForm"></div>
+
 <section
-        spy-app="spyFormat, spyGrid, spyForm, spyLayout"
         ng-controller="FormController"
         class="spy-layout sparse"
         src="/acl/users/form/{{ query | default ('') }}"
+        name="userForm"
         >
     <h3>User form</h3>
 
@@ -12,8 +23,17 @@
         <div spy-input-text="field.username" options="{ label : 'E-Mail Address' }"></div>
         <div spy-input-password="field.password" options="{ label : 'Password' }"></div>
         <div spy-input-select="field.id_acl_group" options="{ label : 'Access Group' }"></div>
+        <a ng-show="field.id_acl_group.value !== null" href="/acl/group/?id={[{ field.id_acl_group.value }]}">view group permissions</a>
+        <a ng-click="$emitAsChannel('acl.group.new.form','groupFormChannel')">create new group</a>
     </div>
+
     <div class="spy-layout buttons">
         <button class="button default" type="submit" ng-disabled="query" ng-click="update()">Update</button>
     </div>
 </section>
+
+<spy-layer>
+
+    {% include '@Acl/Group/form.twig' %}
+
+</spy-layer>
