--- a/src/SprykerFeature/Zed/Acl/Presentation/Users/grid.twig
+++ b/src/SprykerFeature/Zed/Acl/Presentation/Users/grid.twig
@@ -1,6 +1,5 @@
 <section
         class="spy-grid"
-        spy-app="spyFormat, spyGrid, spyForm, spyLayout"
         ng-controller="GridController"
         ng-strict-di
         src="/acl/users/list"
@@ -39,6 +38,6 @@
     <div spy-grid-pages="pages" labels="{ items : 'Show %n items', pages : 'Page %n of %m' }"></div>
 </section>
 
-<a href="/acl/users/form" class="button default">
+<a href="/acl/users/manage" class="button default">
     Add new Backend User
 </a>
