--- a/src/SprykerFeature/Zed/Ui/Static/Assets/styles/shared/lib/_var.scss
+++ b/src/SprykerFeature/Zed/Ui/Static/Assets/styles/shared/lib/_var.scss
@@ -24,8 +24,9 @@ $_rgbGridEven: $_rgbWhite;
 
 
 
-$_tFast: 200ms;
-$_tMed : 500ms;
+$_tFast:  200ms;
+$_tMed :  500ms;
+$_tSlow: 1000ms;
 
 
 
@@ -45,8 +46,8 @@ $_hFont: 14px;
 
 $_xGutter : 36px;
 $_yGutter : 36px;
-$_xSpacing : 18px;
-$_ySpacing : 18px;
+$_xSpacing: 18px;
+$_ySpacing: 18px;
 
 
 $_wMinTile   : 300px;
