fixing the removal of locator from forms so it keep working properly

--- a/src/SprykerFeature/Zed/Acl/Presentation/Group/rules.twig
+++ b/src/SprykerFeature/Zed/Acl/Presentation/Group/rules.twig
@@ -1,5 +1,5 @@
 <section
-        class="spy-grid spy-layout sparse"
+        class="spy-grid"
         ng-controller="GridController"
         ng-strict-di
         src="/acl/group/rules/{{ query | default ('') }}"
