--- a/src/SprykerFeature/Zed/SearchPage/Presentation/Index/index.twig
+++ b/src/SprykerFeature/Zed/SearchPage/Presentation/Index/index.twig
@@ -6,18 +6,24 @@
 
 {% block content %}
     <section
-            spy-app="spyLayout,spyFormat,spyGrid,spyForm"
+            spy-app="spyLayout,spyFormat,spyGrid,spyForm,spyFormAction"
             ng-controller="ComController"
             >
         {#<div spy-form-update="openLayer(); read($argument)" scope="key_edit" channel="glossary"></div>#}
         {#<div spy-form-update="closeLayer()" scope="key_edit" channel="glossary"></div>#}
         {#<div spy-form-abort="closeLayer()" scope="key_edit" channel="glossary"></div>#}
-        {#<div spy-form-update="read()" scope="grid" channel="glossary"></div>#}
+        <div spy-form-update="read()" scope="page-element-grid" channel="page-element"></div>
 
         <div class="spy-layout n4 f2">
-            {% include '@Glossary/Partials/create-page-element-form.twig' %}
 
-            {% include '@Glossary/Partials/page-element-grid.twig' %}
+            <div>
+                {% include '@SearchPage/Form/create-page-element-form.twig' %}
+            </div>
+
+            <div>
+                {% include '@SearchPage/Grid/page-element-grid.twig' %}
+            </div>
+
         </div>
 
     </section>
