--- a/src/SprykerEngine/Zed/Transfer/Business/Model/Generator/Templates/class.php.twig
+++ b/src/SprykerEngine/Zed/Transfer/Business/Model/Generator/Templates/class.php.twig
@@ -24,5 +24,5 @@ class {{ className }} extends AbstractTransfer implements {{ interfacesToImpleme
 {% for sag in settersAndGetters %}
 {{ mcr.method_set(sag) }}
 {{ mcr.method_get(sag) }}
-{% endfor %}
+{%- endfor -%}
 }
