--- a/src/SprykerEngine/Zed/Transfer/Business/Model/Generator/Templates/macros.php.twig
+++ b/src/SprykerEngine/Zed/Transfer/Business/Model/Generator/Templates/macros.php.twig
@@ -11,9 +11,9 @@
 {% if sag.is_special == 1 %}{# create addMethod(ClassType $methodParameter) #}
 
     /**
-     * @var {{ writeIfNot(sag.parameterDataType ~ ' ', '(^string|^int)', sag.parameterDataType) }}${{ sag.passedParameter }}
+     * @var {{ writeIfNot(sag.parameterDataType~' ', '(^string)', sag.parameterDataType) }}${{ sag.passedParameter }}
      */
-    public function add{{ sag.propertyName }}({{ writeIfNot(sag.parameterDataType ~ ' ', '(^string|^int)', sag.parameterDataType) }}${{ sag.passedParameter }})
+    public function add{{ sag.propertyName }}({{ writeIfNot(sag.parameterDataType~' ', '(^string)', sag.parameterDataType) }}${{ sag.passedParameter }})
     {
         $this->{{ sag.passedParameter }}[] = ${{ sag.passedParameter }};
         $this->addModifiedProperty('{{ sag.passedParameter }}');
@@ -21,18 +21,20 @@
         return $this;
     }
 {% endif %}
+
 {%- endmacro %}
 
 {% macro method_set_header(sag, type) %}
+
     /**
-     * @var {{ writeIfNot(type ~ ' ', '(^string|^int)', type) }}${{ sag.passedParameter }}
+     * @var {{ writeIfNot(type~' ', '^string', type) }}${{ sag.passedParameter }}
      */
-    public function set{{ sag.propertyName }}({{ writeIfNot(type ~ ' ', '(^string|^int)', type) }}${{ sag.passedParameter }})
+    public function set{{ sag.propertyName }}({{ writeIfNot(type~' ', '(^string|^int)', type) }}${{ sag.passedParameter }})
 {% endmacro %}
 
 {% macro method_get(sag) %}
     /**
-     * @return {{ writeIfNot(sag.parameterDataType ~ ' ', '(^string|^int)', sag.parameterDataType) }}${{ sag.passedParameter }}
+     * @return {{ writeIfNot(sag.parameterDataType~' ', '^string', sag.parameterDataType) }}${{ sag.passedParameter }}
      */
     public function get{{ sag.propertyName }}()
     {
@@ -43,7 +45,7 @@
 {% macro write_property(prop) %}
 
     /**
-     * @var {{ writeIfNot(prop.parameterDataType ~ ' ', '(^string|^int)', prop.parameterDataType) }}${{ prop.propertyName }}
+     * @var {{ writeIfNot(prop.parameterDataType~' ', '^string', prop.parameterDataType) }}${{ prop.propertyName }}
      */
     protected ${{ prop.propertyName }}{% if prop.defaultValue is defined and prop.defaultValue != '' %} = {{ prop.defaultValue }}{% endif %};
 {% endmacro %}
