--- a/src/SprykerEngine/Zed/Transfer/Business/Model/Generator/Templates/macros.php.twig
+++ b/src/SprykerEngine/Zed/Transfer/Business/Model/Generator/Templates/macros.php.twig
@@ -13,7 +13,7 @@
     /**
      * @var {{ writeIfNot(sag.parameterDataType~' ', '(^string)', sag.parameterDataType) }}${{ sag.passedParameter }}
      */
-    public function add{{ sag.propertyName }}({{ writeIfNot(sag.parameterDataType~' ', '(^string)', sag.parameterDataType) }}${{ sag.passedParameter }})
+    public function add{{ sag.propertyName|singular }}({{ writeIfNot(sag.parameterDataType~' ', '(^string)', sag.parameterDataType)|changeArrayType }}${{ sag.passedParameter }})
     {
         $this->{{ sag.passedParameter }}[] = ${{ sag.passedParameter }};
         $this->addModifiedProperty('{{ sag.passedParameter }}');
@@ -29,7 +29,7 @@
     /**
      * @var {{ writeIfNot(type~' ', '^string', type) }}${{ sag.passedParameter }}
      */
-    public function set{{ sag.propertyName }}({{ writeIfNot(type~' ', '(^string|^int)', type) }}${{ sag.passedParameter }})
+    public function set{{ sag.propertyName }}({{ writeIfNot(type~' ', '(string|integer|null)', type) }}${{ sag.passedParameter }})
 {% endmacro %}
 
 {% macro method_get(sag) %}
